syntax = "proto3";

option go_package = "api/;api";

package ozonva.book.api;

import "google/protobuf/empty.proto";

message BookMessage {
    uint64 UserId = 1;
	string Title  = 2;
	string Author = 3;
	string ISBN10 = 4;
	string ISBN13 = 5;
}

message CurrentBookMessage {
    string ISBN10 = 1;
}

message ListBooksMessage {
    repeated BookMessage Books = 1;
}

service BookService {
    rpc CreateBook (BookMessage) returns (BookMessage);
    rpc DescribeBook (CurrentBookMessage) returns (BookMessage);
    rpc ListBooks (google.protobuf.Empty) returns (ListBooksMessage);
    rpc RemoveBook (CurrentBookMessage) returns (BookMessage);
}
